package it.ewlab.district;

message TaxiAvailabilityMsg{
    required int32 district = 1;
}